weather/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    app: weather
  name: weather
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
      - image: nwik/weather-server
        imagePullPolicy: Always
        name: weather-server
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - mountPath: /opt/weatherServer/config.yaml
            name: weather-config
            subPath: config.yaml
      volumes:
        - name: weather-config
          configMap:
            name: weather-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
