weather/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather
  namespace: default
spec:
  ports:
  - name: https
    port: 8080
  externalName: 192.168.1.69
  type: ExternalName
